update to use Rx

--- a/NuGetDirSync/App.config
+++ b/NuGetDirSync/App.config
@@ -5,10 +5,9 @@
     <add key="NuGetServer" value="" /> <!-- eg http://deployment-server/nuget/packages -->
     <add key="NuGetApiKey" value="" /> <!-- eg NUGET-API-KEY-DSFSDFJJYJYFNBFYBRTRTT -->
     <add key="PackageName" value="" /> <!-- eg Org.CmsPackage -->
-    <add key="TempPath" value="content" />
+    <add key="TempPath" value="tmp" />
     <add key="VersionFile" value="NextVersion.txt" />
-    <add key="PackageNuSpec" value="Package.nuspec" />
-    <add key="FurtherChangesWaitSeconds" value="30000" />
+    <add key="FurtherChangesWaitSeconds" value="10" />
   </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
